--- a/SimpleOps/Guías/CSS/Estilos.css
+++ b/SimpleOps/Guías/CSS/Estilos.css
@@ -16,3 +16,18 @@ h1, h2 {
     margin-top: 80px;
     margin-bottom: 30px;
 }
+
+h3 {
+    margin-top: 40px;
+}
+
+table, th, td {
+    padding: 10px;
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+li {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
