--- a/SimpleOps/Plantillas/MarcoPdf.cshtml
+++ b/SimpleOps/Plantillas/MarcoPdf.cshtml
@@ -104,7 +104,7 @@
                 <span>@empresa.TeléfonoPrincipal&nbsp;&nbsp;</span>
                 <span>@empresa.DirecciónUbicaciónEfectiva&nbsp;&nbsp;</span>
                 <span><a href="mailto:@(empresa.EmailVentas)" class="fc-l150">@empresa.EmailVentas</a>&nbsp;&nbsp;</span>
-                <span><a href="@empresa.SitioWeb" class="fc-l150">@empresa.SitioWeb</a></span>
+                <span><a href="@("https://" + empresa.SitioWeb)" class="fc-l150">@empresa.SitioWeb</a></span>
             </div>
 
             <div>
