--- a/SimpleOps/Plantillas/VentaPdf.cshtml
+++ b/SimpleOps/Plantillas/VentaPdf.cshtml
@@ -49,7 +49,7 @@
                     <td class="fecha-td">
                         <div class="fecha-cn">
                             <span class="t18b fecha-tít">Fecha</span>
-                            <div class="fecha-val">@Model.FechaHora?.ToShortDateString() @Model.FechaHora?.ToShortTimeString()</div>
+                            <div class="fecha-val">@Model.FechaHora?.ToShortDateString() @Model.FechaHora?.ToString("hh:mm tt")</div>
                         </div>
                     </td>
 
