--- a/SimpleOps/Interfaz/Ventanas/Principal.xaml
+++ b/SimpleOps/Interfaz/Ventanas/Principal.xaml
@@ -42,6 +42,7 @@
                         </StackPanel.Resources>
                         <Button Click="CargarDatosIniciales_Clic" Content="Cargar Datos Iniciales" />
                         <Button Click="ReiniciarBaseDatosSQLite_Clic" Content="Reiniciar Base de Datos" />
+                        <Button Click="PruebasHabilitaciónFacturaciónElectrónica_Clic" Content="Hacer Pruebas para &#xa;Habilitar la Facturación&#xa;Electrónica en la DIAN" Height="60" />
                     </StackPanel>
                     
                 </StackPanel>
