--- a/SimpleOps/Guías/CSS/Estilos.css
+++ b/SimpleOps/Guías/CSS/Estilos.css
@@ -31,3 +31,9 @@ li {
     margin-bottom: 10px;
     margin-top: 10px;
 }
+
+código {
+    font-family: Courier New, Courier, monospace;
+    margin-bottom: 50px;
+    margin-top: 50px;
+}
